# zero-shot-TSAD

./: .gitignore  .tmp_paper_extract.txt  .tmp_paper_full.txt  CONTRIBUTING.md  LICENSE  README.md
synthetic_tsad/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
synthetic_tsad/apps/tsad_studio/: README.md  server.py  studio_core.py
synthetic_tsad/apps/tsad_studio/static/: app.js  index.html  styles.css
synthetic_tsad/configs/: default.json  default.yaml  detectable_review_overrides.json  paper_like_long_tail_sequence_length.json
synthetic_tsad/scripts/: check_quality.ps1  generate_dataset.py  pack_dataset.py  setup_env.ps1
synthetic_tsad/src/synthtsad/: __init__.py  config.py  interfaces.py  pipeline.py  utils.py
synthetic_tsad/src/synthtsad/anomaly/: local.py  seasonal.py
synthetic_tsad/src/synthtsad/causal/: arx.py  dag.py
synthetic_tsad/src/synthtsad/components/: noise.py  seasonality.py  trend.py
synthetic_tsad/src/synthtsad/io/: __init__.py  sharded.py  writer.py
synthetic_tsad/src/synthtsad/labeling/: labeler.py
synthetic_tsad/tests/: conftest.py  test_config.py  test_config_validation.py  test_extended_anomalies.py  test_labeler.py  test_studio_metadata.py
train_tsad/: README.md  pyproject.toml
train_tsad/apps/tsad_workbench/: README.md  server.py
train_tsad/apps/tsad_workbench/backend/: __init__.py  dataset_browser.py  environment.py  job_services.py  job_store.py  preview_service.py  processes.py  runtime.py  studio_bridge.py  training_metrics.py
train_tsad/apps/tsad_workbench/static/: app.js  charts.js  index.html  main.js  styles.css
train_tsad/configs/: base.json  timercd_pretrain_paper_aligned.json  timercd_pretrain_paper_aligned_patch_asl.json  timercd_small.json
train_tsad/scripts/: _bootstrap.py  check_quality.ps1  evaluate.py  inspect_batch.py  setup_env.ps1  train.py
train_tsad/src/train_tsad/: __init__.py  config.py  interfaces.py
train_tsad/src/train_tsad/cli/: __init__.py  evaluation.py  inspect_data.py  train.py
train_tsad/src/train_tsad/data/: __init__.py  collate.py  dataset.py  factory.py  manifest.py  quality.py  quality_rules.py  records.py  (+9 more)
train_tsad/test/: run_mini_pipeline.ps1
train_tsad/tests/: test_config.py  test_patch_asl.py  test_quality.py  test_runtime_refactor.py  test_workbench_backend.py
(+50 files in other folders)
