[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "train-tsad"
version = "0.0.0"
description = "Training skeleton for zero-shot TSAD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "torch>=2.2",
]

[project.scripts]
train-tsad-train = "train_tsad.cli.train:main"
train-tsad-evaluate = "train_tsad.cli.evaluation:main"
train-tsad-inspect = "train_tsad.cli.inspect_data:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyright>=1.1.390",
  "ruff>=0.11.0",
  "types-PyYAML>=6.0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "apps", "scripts", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"apps/tsad_workbench/server.py" = ["E402"]
"tests/*" = ["E402"]
